--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     implementation "com.stripe:stripe-java:24.0.0"
     implementation 'com.stripe:stripe-android:20.37.3'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.gms:play-services-location:21.1.0'
 
