--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.biometric:biometric:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 
